# distributed-ml-inference-drift-detection

./: README.md  docker-compose.yaml  locustfile.py  main.py  pyproject.toml  run.py
grafana/dashboards/: dash.json
grafana/provisioning/dashboards/: dashboard.yaml
metric-server/: Dockerfile
metric-server/app/: app.py  pyproject.toml
model-server/: Dockerfile
model-server/app/: app.py  pyproject.toml
nginx/: nginx.conf
promethues/: promethues.yml
