[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently==0.4.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "pydantic<2",
    "scikit-learn>=1.7.1",
    "prometheus-client>=0.22.1",
    "uvicorn>=0.35.0",
]
