[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "prometheus-client>=0.22.1",
    "uvicorn>=0.35.0",
]
